feat: add nav bar & hero section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Acme App</title>
   </head>
   <body>
-    <!-- Start Coding Here -->
+    <header class="homepage-header">
+      <img src=".\logo.png" class="logo-icon" />
+      <nav class="homepage-nav">
+        <a href="#" class="home-page-nav">Home</a>
+        <a href="#" class="features-page-nav">Features</a>
+        <a href="#" class="pricing-page-nav">Pricing</a>
+        <a href="#" class="contact-page-nav">Contact</a>
+      </nav>
+    </header>
+    <main class="homepage-main">
+      <section class="hero-banner">
+          <h6>🌈️ Acme Productivity App</h6>
+          <h1>Boost Your <span class="product-text">Product</span>ivity</h1>
+          <h3>Streamline your workflow with our all-in-one productivity app.</h3>
+          <a href="#" class="free-trial-button">Start Free Trial</a>
+      </section>
+    </main>
   </body>
 </html>
