feat: add feature-card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <title>Acme App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="homepage-header">
@@ -25,5 +28,24 @@
           <a href="#" class="free-trial-button">Start Free Trial</a>
       </section>
     </main>
+    <section class="feat-card">
+      <div class="card-workflow">
+        <img class="icon-1" src="image1.png" alt="rocket-icon">
+      <h1>Streamlined Workflows</h1>
+Automate repetitive tasks and focus on high-impact work with our 
+powerful productivity features.
+      </div>
+      <div class="card-performance">
+        <img class="icon-2" src="image2.png" alt="board-icon">
+       <h1> Blazing Fast Performance</h1>
+Experience lightning-fast performance and instant responsiveness with our cutting-edge technology.
+      </div>
+      <div class="card-interface">
+        <img class="icon-3" src="image3.png" alt="smily-icon">
+       <h1> Intuitive Interface</h1>
+Our user-friendly interface makes it easy for anyone to streamline their workflow.
+      </div>
+    </section>
+
   </body>
 </html>
