--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="homepage-header">
@@ -47,5 +48,30 @@ Our user-friendly interface makes it easy for anyone to streamline their workflo
       </div>
     </section>
 
+    <section class="contact-section">
+      <h1>Get in Touch</h1>
+      <form >
+        <label >Name</label>
+        <input type="text" name="name" placeholder="Name" required>
+        <label >Email</label>
+        <input type="email" name="email" placeholder="Email" required>
+        <label >Message</label>
+        <textarea name="message" placeholder="Your message..." required></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <div class="acem">
+        <p >Acme productivity app ©2024</p>
+      </div>
+      <div class="message">
+        <a href="#">FAQ</a>
+        <a href="#">Terms</a>
+        <a href="#">AI Policy</a>
+        <a href="#">Pricing</a>
+      </div>
+    </footer>
+    
   </body>
 </html>
