--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <title>Acme App</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Start Coding Here -->
+    <section class="contact-section">
+      <h1>Get in Touch</h1>
+      <form >
+        <label >Name</label>
+        <input type="text" name="name" placeholder="Name" required>
+        <label >Email</label>
+        <input type="email" name="email" placeholder="Email" required>
+        <label >Message</label>
+        <textarea name="message" placeholder="Your message..." required></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <div class="acem">
+        <p >Acme productivity app ©2024</p>
+      </div>
+      <div class="message">
+        <a href="#">FAQ</a>
+        <a href="#">Terms</a>
+        <a href="#">AI Policy</a>
+        <a href="#">Pricing</a>
+      </div>
+    </footer>
+    
   </body>
 </html>
