feat: add contact section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Our user-friendly interface makes it easy for anyone to streamline their workflo
     </section>
 
     <section class="contact-section">
-      <h1>Get in Touch</h1>
+      <h1 class="name">Get in Touch</h1>
       <form >
         <label >Name</label>
         <input type="text" name="name" placeholder="Name" required>
